--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-logging.level.org.springframework.web = DEBUG
+#logging.level.org.springframework.web = DEBUG
+spring.mvc.static-path-pattern=/resources/**
+springfox.documentation.swagger.v2.path=/swagger/api-docs
