--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.0</version>
+		</dependency>
 		 <!--Swagger-->
 		<dependency>
 			<groupId>io.springfox</groupId>
