--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,20 @@ spring.datasource.password = 123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.org.springframework.web = DEBUG
 spring.mvc.static-path-pattern=/resources/**
 springfox.documentation.swagger.v2.path=/swagger/api-docs
+
+#Jwt configuration
+# The secret will be used to sign the JWT tokens
+jwt.token.secret=something-secret-you-cannot-keep-it
+
+# The header we are going to use for authentication
+jwt.auth.header=x-auth-token
+
+# After how many hours the token will expire
+jwt.expire.hours=24
